--- a/apiv2/sandbox-banking.yaml
+++ b/apiv2/sandbox-banking.yaml
@@ -3492,6 +3492,13 @@ components:
           pattern: "[\\u0000-\\u2FFF]+"   
         images: 
           $ref: '#/components/schemas/Images'
+        forgotten_password_url:
+          type: string
+          description: "Url for users to reset their password."
+          example: 'https://www.wasabi.uk/account/forgot'
+          maxLength: 2048
+          minLength: 1
+          pattern: "((([A-Za-z]{3,9}:(?:\\/\\/)?)(?:[-;:&=\\+\\$,\\w]+@)?[A-Za-z0-9.-]+|(?:www.|[-;:&=\\+\\$,\\w]+@)[A-Za-z0-9.-]+)((?:\\/[\\+~%\\/.\\w-_]*)?\\??(?:[-\\+=&;%@.\\w_]*)#?(?:[\\w]*))?)"
     PlanDetails:
       type: object
       properties:
@@ -3596,6 +3603,13 @@ components:
                 maxLength: 50
                 pattern: "[\\u0000-\\u2FFF]+"
                 description: "Brief explanation of what the tier provides."
+        forgotten_password_url:
+          type: string
+          description: "Url for users to reset their password."
+          example: 'https://www.wasabi.uk/account/forgot'
+          maxLength: 2048
+          minLength: 1
+          pattern: "((([A-Za-z]{3,9}:(?:\\/\\/)?)(?:[-;:&=\\+\\$,\\w]+@)?[A-Za-z0-9.-]+|(?:www.|[-;:&=\\+\\$,\\w]+@)[A-Za-z0-9.-]+)((?:\\/[\\+~%\\/.\\w-_]*)?\\??(?:[-\\+=&;%@.\\w_]*)#?(?:[\\w]*))?)"      
     LoyaltyPlan:
       type: object
       properties:
@@ -3845,6 +3859,7 @@ components:
               - order: 1
                 display_label: 'Card number'
                 validation: "^((63317491)|(63317492))[0-9]{10}$"
+                validation_description: "All card numbers start with 6331"
                 description: "Your 10 digit card number"
                 credential_slug: "card_number"
                 type: "text"
@@ -3855,6 +3870,7 @@ components:
               - order: 2
                 display_label: 'Email address'
                 validation: '^(?=[^@]{1,64}@)(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
+                validation_description: null
                 description: "Your e-mail address"
                 credential_slug: "email"
                 type: "text"
@@ -3865,6 +3881,7 @@ components:
               - order: 3
                 display_label: 'Password'
                 validation: '^(?=[^@]{1,64}@)(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
+                validation_description: "Min 8 characters, 1 uppercase, 1 lowercase and 1 special character required"
                 description: "The password you use to log in to your loyalty account"
                 credential_slug: "password"
                 type: "text"
@@ -3874,6 +3891,8 @@ components:
                 alternative:
               - order: 4
                 display_label: 'Title'
+                validation: '^(Mr|Mrs|Miss|Dame|Ms|Sir|Doctor|Professor|Lord|lady)$'
+                validation_description: null
                 description: "Select title or salutation"
                 credential_slug: "title"
                 type: "choice"
@@ -3893,6 +3912,8 @@ components:
                 alternative:
               - order: 5
                 display_label: 'First name'
+                validation: '^(((?=.{1,20}$)[A-Za-z\\-\À-\ÿ])+\\s*){1,4}$'
+                validation_description: null
                 description: "First name"
                 credential_slug: "first_name"
                 type: "string"
@@ -3902,6 +3923,8 @@ components:
                 alternative:
               - order: 6
                 display_label: 'Last name'
+                validation: '^(((?=.{1,20}$)[A-Za-z\\-\À-\ÿ])+\\s*){1,4}$'
+                validation_description: null
                 description: "Last name"
                 credential_slug: "last_name"
                 type: "string"
@@ -3929,6 +3952,7 @@ components:
               - order: 1
                 display_label: 'Email address'
                 validation: '^(?=[^@]{1,64}@)(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
+                validation_description: null
                 description: "Your e-mail address"
                 credential_slug: "email"
                 type: "text"
@@ -3939,6 +3963,7 @@ components:
               - order: 2
                 display_label: 'Password'
                 validation: '^(?=[^@]{1,64}@)(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
+                validation_description: "Min 8 characters, 1 uppercase, 1 lowercase and 1 special character required"
                 description: "The password you use to log in to your loyalty account"
                 credential_slug: "password"
                 type: "text"
@@ -3948,6 +3973,8 @@ components:
                 alternative:
               - order: 3
                 display_label: 'Title'
+                validation: '^(Mr|Mrs|Miss|Dame|Ms|Sir|Doctor|Professor|Lord|lady)$'
+                validation_description: null
                 description: "Select title or salutation"
                 credential_slug: "title"
                 type: "choice"
@@ -3967,6 +3994,8 @@ components:
                 alternative:
               - order: 4
                 display_label: 'First name'
+                validation: '^(((?=.{1,20}$)[A-Za-z\\-\À-\ÿ])+\\s*){1,4}$'
+                validation_description: null
                 description: "First name"
                 credential_slug: "first_name"
                 type: "string"
@@ -3976,6 +4005,8 @@ components:
                 alternative:
               - order: 5
                 display_label: 'Last name'
+                validation: '^(((?=.{1,20}$)[A-Za-z\\-\À-\ÿ])+\\s*){1,4}$'
+                validation_description: null
                 description: "Last name"
                 credential_slug: "last_name"
                 type: "string"
@@ -4012,6 +4043,7 @@ components:
                   order: 1
                   display_label: 'Bonus card number'
                   validation: "^((63317491)|(63317492))[0-9]{10}$"
+                  validation_description: "All card numbers start with 6331"
                   description: "Your 10 digit card number"
                   credential_slug: "card_number"
                   type: "text"
@@ -4031,6 +4063,7 @@ components:
               - order: 1
                 display_label: 'Password'
                 validation: '^(?=[^@]{1,64}@)(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
+                validation_description: null
                 description: "The password you use to log in to your loyalty account"
                 credential_slug: "password"
                 type: "text"
@@ -4089,6 +4122,13 @@ components:
           minLength: 0
           maxLength: 250
           pattern: ".*"
+        validation_description:
+          type: string
+          description: "Text field that contains additional information on what constitutes a valid value, to guide users on input."
+          example: All card numbers start with 6331
+          minLength: 0
+          maxLength: 250
+          pattern: "[\\u0000-\\u2FFF]+"
         description:
           type: string
           description: "Text field that can be used as a hint to the user, guiding them on input."
