--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,34 +1,35 @@
+---
 name: ci
 
 on:
   push:
-    branches: [ master ]
+    tags: ['v[0-9]+.[0-9]+.[0-9]+']
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
-  tests:
-    name: tests
+  test:
+    name: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: '3.11'
       - run: pip install ruff isort black
       - run: ruff check .
       - run: black --line-length=120 --check .
       - run: isort --check --line-length 120 --profile black .
-  release:
+
+  build:
     if: github.event_name == 'push'
-    name: create_release
+    name: build
+    needs: [test]
     runs-on: ubuntu-latest
-    needs: [tests]
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - run: echo "container_tag=$(date +'%FT%H%M%SZ')" >> $GITHUB_ENV
       - uses: docker/login-action@v2
         with:
           registry: binkcore.azurecr.io
@@ -38,5 +39,35 @@ jobs:
         with:
           push: true
           tags: |
-            binkcore.azurecr.io/docs:${{ env.container_tag }}
-            binkcore.azurecr.io/docs:latest
+            binkcore.azurecr.io/${{ github.event.repository.name }}:${{ github.ref_name }}
+            binkcore.azurecr.io/${{ github.event.repository.name }}:latest
+
+  release:
+    if: github.event_name == 'push'
+    name: release
+    needs: [build]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        environment:
+          - dev
+          - lloyds
+          - barclays
+          - retail
+          - staging
+          - production
+    environment:
+      name: ${{ matrix.environment }}
+    container: ghcr.io/binkhq/tagbot:latest
+    steps:
+      - run: |
+          tagbot \
+            --username binkcore \
+            --password ${{ secrets.ACR_BINKCORE_PASSWORD }} \
+            --source binkcore.azurecr.io/${{ github.event.repository.name }}:${{ github.ref_name }} \
+            --tag ${{ matrix.environment }}-${{ github.ref_name }}
+          tagbot \
+            --username binkcore \
+            --password ${{ secrets.ACR_BINKCORE_PASSWORD }} \
+            --source binkcore.azurecr.io/${{ github.event.repository.name }}:${{ github.ref_name }} \
+            --tag ${{ matrix.environment }}
